# enum_dispatch

./: Cargo.toml  README.md
benches/: blackbox.rs  compiler-optimized.rs  homogeneous-vec.rs
benches/common_structs/: mod.rs  one.rs  zero.rs
src/: attributed_parser.rs  cache.rs  enum_dispatch_item.rs  enum_dispatch_variant.rs  expansion.rs  filter_attrs.rs  lib.rs
tests/: compiles.rs  generics.rs  orders.rs  scopes.rs  serde.rs
